Add date range queries for getting exercises
